# AXITHOR-CLOUD-OS-POC

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_storage_accounts.py  0003_modules_3_7.py  0004_site_drive_folder_optional.py  0005_storage_token_expires_at.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: auth.py  cache.py  sync.py  (+6 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/integrations/: google_oauth.py
backend/app/middleware/: auth.py  subdomain.py
backend/app/models/: deployment.py  domain.py  file_metadata.py  oauth_account.py  site.py  storage_account.py  sync_event.py  user.py  website_file.py
backend/app/repositories/: domain_repository.py  file_metadata_repository.py  oauth_repository.py  site_repository.py  storage_repository.py  user_repository.py  website_file_repository.py
backend/app/schemas/: auth.py  common.py  deploy.py  domain.py  metadata.py  site.py  storage.py  sync.py
backend/app/services/: asset_resolution_service.py  auth_service.py  cloudflare_service.py  deployment_service.py  file_validation_service.py  google_drive_service.py  google_drive_storage_service.py  metadata_service.py  site_service.py  subdomain_service.py  sync_service.py  zip_service.py
backend/app/utils/: mime_types.py
backend/tests/: conftest.py  test_asset_resolution.py  test_mime_types.py  test_serve_api.py
(+21 files in other folders)
